# pdargs

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  readme.md
.github/workflows/: build.yml  test.yml
cmake/: find_gtest.cmake
include/pd/: pdargs.h  pdargs.hh
test/: CMakeLists.txt  test.cc
